fixed the login-signup css to load on ieach view

--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the login controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.banner {
+	padding-left: 10%;
+	padding-right: 10%;
+	background-color: 39393B;
+	height: 500px;
+	background-size: 100%;
+	opacity:100%; 
+}
