--- a/app/assets/stylesheets/registrations.scss
+++ b/app/assets/stylesheets/registrations.scss
@@ -1,7 +1,7 @@
 // Place all the styles related to the registrations controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.banner-login {
+.banner-signup {
 	padding-left: 10%;
 	padding-right: 10%;
 	background-image: image-url("sign_up2.jpg");
